actu trabajado en clase

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,27 +11,26 @@
 
 </head>
 <body>
- <h1>
-    Pagina principal</h1>
-
+  <div style="background-color: rgb(224, 224, 224);">
+  <h1>Navegacion</h1>
     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+    <a class="nav-link active Light" aria-current="page" href="/">Inicio</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/animales">animales</a>
+    <a class="nav-link text-bg-light ms-1" href="/animales">animales</a>
   </li>
   <li class="nav-item ">
-    <a class="nav-link" href="/Vehiculos">Vehiculos Antiguos</a>
+    <a class="nav-link text-bg-light ms-1" href="/Vehiculos">Vehiculos Antiguos</a>
   </li>
   <li class="nav-item ">
-    <a class="nav-link" href="/Maravillas">Las Maravillas del Mundo</a>
+    <a class="nav-link text-bg-light ms-1" href="/Maravillas">Las Maravillas del Mundo</a>
   </li>
   <li class="nav-item ">
-    <a class="nav-link" href="/AcercaDe">Acerca De</a>
+    <a class="nav-link text-bg-light ms-1" href="/AcercaDe">Acerca De</a>
   </li>
 </ul>
-
+</div>
   {%block content%}
   
   {%endblock%}
