--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  {% block title %}
     <title>Sitio principal</title>
-  
+  {% endblock %}
+
 
 </head>
 <body>
   <div style="background-color: rgb(224, 224, 224);">
-  <h1>Navegacion</h1>
+<h1>Navegacion</h1>
     <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active Light" aria-current="page" href="/">Inicio</a>
