--- a/templates/AcercaDe.html
+++ b/templates/AcercaDe.html
@@ -1,7 +1,37 @@
 {% extends 'base.html' %}
-
+{% block title %}<title>Acerca de...</title>{% endblock %}
 
 {% block content %}
-  <h2>HOLA ANIMALES</h2>
-  <p>Esta es la página de animales.</p>
+<div class="bg-light py-5">
+  <div class="container bg-white rounded shadow-sm p-4">
+    <h2 class="text-center mb-4 text-primary">Acerca de Mí</h2>
+
+      <div class="col-md">
+        <h4 class="text-justify text-secondary">
+          Las cosas que me gustan serian algunos ejemplos como estos:
+         
+         <h5 class="text-justify text-secondary"> <ul>
+  <li>Musica estilo breakcore o japonesa</li>
+  <li>Un personaje Ficticio llamado Osage chan</li>
+  <li>Admiracion a un equipo de lol llamado T1</li>
+  <li>Me encantan los videojuegos sobre todos los de project moon</li>
+  <li>Me encanta la lluvia</li>
+  <li>Me gusta el anime</li>
+  <li>Me gusta el lol</li>
+
+</ul>
+</h5>
+        </h4>
+
+        <h4 class="text-justify text-secondary">
+          En el futuro, me gustaria seguir estudiando programacion e intentar esforzarme mas para aumentar mi rendimiento e intentar conseguir un trabajo directamente
+          para no sufrir tanto economicamente.
+        </h4>
+      </div>
+
+    <hr class="my-4">
+
+    <h5 class="text-center text-muted">Morales Torres Edgar Uriel</h5>
+  </div>
+</div>
 {% endblock %}
