--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -2,7 +2,7 @@
 {% block title %}<title>Vehiculos Antiguos</title>{% endblock %}
 
 {% block content %}
-<div style="background-color: rgb(230, 219, 213);">
+<div style="background-color: rgba(236, 236, 236, 1);">
 <div class="container py-4">
     <h2 class="text-center mb-3 mt-1 text-primary">Vehículos Antiguos</h2>
     <h5 class="text-center text-secondary mb-5">El automóvil fue un invento que cambió por completo la forma en que nos desplazamos y transformó nuestra sociedad, fue un pilar fundamental en el avance de la tecnología, conectividad y producción mundial. Su invención tiene una historia fascinante que se remonta al siglo XIX.
