--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   {% block title %}
-    <title>Sitio principal</title>
+    <title>Inicio</title>
   {% endblock %}
 
 
@@ -33,8 +33,35 @@
 </ul>
 </div>
   {%block content%}
-  
-  {%endblock%}
+
+<div class="bg-light py-5">
+  <div class="container bg-white rounded shadow-sm p-4">
+    <h2 class="text-center mb-4 text-primary">Bienvenido a la pagina</h2>
+
+    <p class="lead text-center text-secondary mb-4">
+      En esta pagina encontraras información  sobre distintos temas como la historia y cultura.
+      Desde de las <strong>7 Maravillas del Mundo</strong>, hasta algunas historia detras de los
+      <strong>Vehículos Antiguos</strong> y la belleza del <strong>Reino Animal</strong>.
+    </p>
+
+    <p class="text-center mb-5">
+    Explora las diferentes secciones para conocer datos de animales, historias de vehiculos y las maravillas creadas por la humanidad, esto te permitira aprender mas sobre estos temas interesantes.
+    </p>
+
+    <div class="row text-center">
+      <div class="col-md-6 mb-4">
+        <img src="{{ url_for('static', filename='dragonMar.webp') }}" class="img-fluid rounded shadow-sm" style="height:350px;" alt="Animales exóticos">
+        <h5 class="mt-2 text-secondary">Descubre el reino animal y su diversidad</h5>
+      </div>
+      <div class="col-md-6 mb-4">
+        <img src="{{ url_for('static', filename='chice.jpg') }}" class="img-fluid rounded shadow-sm" style="height:350px;" alt="Maravillas del mundo">
+        <h5 class="mt-2 text-secondary">Explora las maravillas creadas por la humanidad</h5>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
