--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,13 @@
 <h1>Navegacion</h1>
     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active Light" aria-current="page" href="/">Inicio</a>
+    <a class="nav-link active Light ms-1" style="background-color: rgb(149, 201, 201);" aria-current="page" href="/registrate">registrate</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link active Light ms-1" style="background-color: rgb(149, 201, 201);" aria-current="page" href="/iniciaSes">Inicia Sesion</a>
+  </li>
+      <li class="nav-item">
+    <a class="nav-link active Light ms-1" aria-current="page" href="/">Inicio</a>
   </li>
   <li class="nav-item">
     <a class="nav-link text-bg-light ms-1" href="/animales">animales</a>
